--- a/crates/sui-rosetta/docker/sui-rosetta-testnet/docker-compose.yaml
+++ b/crates/sui-rosetta/docker/sui-rosetta-testnet/docker-compose.yaml
@@ -1,33 +1,22 @@
 ---
 version: "3.9"
 services:
-  sui-full-node:
-    image: mysten/sui-rosetta-testnet
-    ports:
-      - "9000:9000"
-    expose:
-      - "9000"
-    working_dir: /sui/testnet
-    command:
-      - /bin/bash
-      - -c
-      - |
-        /usr/local/bin/sui-node --config-path fullnode.yaml
-    stdin_open: true
-    tty: true
   rosetta-online:
     image: mysten/sui-rosetta-testnet
     ports:
       - "9002:9002"
     expose:
       - "9002"
+      - "9000"
+    volumes:
+      - data:/data:rw
     working_dir: /sui/testnet
     command:
       - /bin/bash
       - -c
       - |
         /usr/local/bin/sui-rosetta generate-rosetta-cli-config --env testnet &
-        /usr/local/bin/sui-rosetta start-online-remote-server --env testnet --full-node-url http://sui-full-node:9000
+        /usr/local/bin/sui-rosetta start-online-server --env testnet --node-config fullnode.yaml
     stdin_open: true
     tty: true
   rosetta-offline:
@@ -44,4 +33,5 @@ services:
         /usr/local/bin/sui-rosetta start-offline-server --env testnet
     stdin_open: true
     tty: true
-
+volumes:
+  data:
